--- a/repo/dbupdate/trunk/pom.xml
+++ b/repo/dbupdate/trunk/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <bridges.version>2.0.3-SNAPSHOT</bridges.version>
-        <core.version>1.9.0-SNAPSHOT</core.version>
+        <bridges.version>2.0.4</bridges.version>
+        <core.version>1.9.0</core.version>
     </properties>
 
     <scm>
