--- a/repo/sanity/trunk/intact-sanity-rules/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-rules/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>sanity-master</artifactId>
         <groupId>uk.ac.ebi.intact.sanity</groupId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-sanity-rules</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
 
     <name>IntAct Sanity :: Sanity Rules</name>
 
