--- a/repo/data-exchange/trunk/intact-cvutils/pom.xml
+++ b/repo/data-exchange/trunk/intact-cvutils/pom.xml
@@ -17,6 +17,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <version>1.9.1-SNAPSHOT</version>
        </dependency>
 
         <dependency>
@@ -38,15 +39,12 @@
             <version>1.14.1</version>
         </dependency>
 
-        <!--for opencsv -->
-
+        <!-- other third party -->
        <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>1.8</version>
        </dependency>
-        
-
     </dependencies>
 
     <!-- EBI repositories -->
@@ -74,6 +72,4 @@
             </snapshots>
         </repository>
     </repositories>
-
- 
 </project>
