--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -1,19 +1,19 @@
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
-log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=DEBUG
-log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.PSILoader=INFO
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=WARN
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.PSILoader=WARN
 
 # intact-core
-log4j.category.uk.ac.ebi.intact=DEBUG
-log4j.category.uk.ac.ebi.intact.persistence=INFO
-log4j.category.uk.ac.ebi.intact.model=INFO
+log4j.category.uk.ac.ebi.intact=WARN
+log4j.category.uk.ac.ebi.intact.persistence=WARN
+log4j.category.uk.ac.ebi.intact.model=WARN
 log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
-log4j.category.uk.ac.ebi.intact.config=INFO
-log4j.category.uk.ac.ebi.intact.context=INFO
-log4j.category.uk.ac.ebi.intact.annotation=INFO
+log4j.category.uk.ac.ebi.intact.config=WARN
+log4j.category.uk.ac.ebi.intact.context=WARN
+log4j.category.uk.ac.ebi.intact.annotation=WARN
 
 
-log4j.category.uk.ac.ebi.intact.core.persister=INFO
+log4j.category.uk.ac.ebi.intact.core.persister=WARN
 
 # other intact
 log4j.category.psidev.psi.mi=WARN
@@ -21,27 +21,27 @@ log4j.category.psidev.psi.mi=WARN
 # this party from here
 log4j.category.uk.ac.ebi.ook=ERROR
 
-log4j.category.net.sf.ehcache=INFO
+log4j.category.net.sf.ehcache=WARN
 
-log4j.category.org.apache=INFO
+log4j.category.org.apache=WARN
 
 log4j.category.org.hibernate=ERROR
 
 log4j.category.org.hibernate.cfg=WARN
 
-log4j.category.org.hibernate.impl=INFO
+log4j.category.org.hibernate.impl=WARN
 log4j.category.org.hibernate.loader=WARN
-log4j.category.org.hibernate.util=INFO
-log4j.category.org.hibernate.persister=INFO
+log4j.category.org.hibernate.util=WARN
+log4j.category.org.hibernate.persister=WARN
 log4j.category.org.hibernate.validator=ERROR
 
-log4j.category.org.hibernate.engine=INFO
-log4j.category.org.hibernate.event=INFO
+log4j.category.org.hibernate.engine=WARN
+log4j.category.org.hibernate.event=WARN
 
 #Log all SQL DML statements as they are executed
-log4j.category.org.hibernate.SQL=INFO
+log4j.category.org.hibernate.SQL=WARN
 #Log all JDBC parameters
-log4j.category.org.hibernate.type=INFO
+log4j.category.org.hibernate.type=WARN
 #Log all SQL DDL statements as they are executed
 log4j.category.org.hibernate.tool.hbm2ddl=WARN
 #Log the state of all entities (max 20 entities) associated with the session at flush time
@@ -49,9 +49,9 @@ log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
 log4j.category.org.hibernate.cache=DEBUG
 #Log transaction related activity
-log4j.category.org.hibernate.transaction=INFO
+log4j.category.org.hibernate.transaction=WARN
 #Log all JDBC resource acquisition
-log4j.category.org.hibernate.jdbc=INFO
+log4j.category.org.hibernate.jdbc=WARN
 #Log HQL and SQL ASTs during query parsing
 log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
