--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
@@ -18,12 +18,12 @@
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
-            <version>1.5.1</version>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab-search</artifactId>
-            <version>1.5.1</version>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.util</groupId>
