--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
-            <version>1.5.1</version>
+            <version>1.6.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
