--- a/repo/service/tags/intact-view_before-sprints/pom.xml
+++ b/repo/service/tags/intact-view_before-sprints/pom.xml
@@ -180,12 +180,6 @@
 
         <!-- Intact -->
         <dependency>
-            <groupId>uk.ac.ebi.intact.dataexchange.imex</groupId>
-            <artifactId>intact-imex-import</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>uk.ac.ebi.intact.util</groupId>
             <artifactId>intact-ols</artifactId>
             <version>2.0-beta-8</version>
@@ -197,10 +191,29 @@
             </exclusions>
         </dependency>
 
+      <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+            <version>1.9.2-SNAPSHOT</version>
+        </dependency>
+
+
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
+
+         <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psixml-exchange</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange</groupId>
+            <artifactId>intact-cvutils</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
 
@@ -249,14 +262,14 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.2.3</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.2.3</version>
             <scope>compile</scope>
         </dependency>
 
