--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.util</groupId>
             <artifactId>intact-ols</artifactId>
-            <version>2.0-beta-9</version>
+            <version>2.0-beta-10-SNAPSHOT</version>
         </dependency>        
 
         <!-- Third party -->
