--- a/repo/bridges/trunk/legacy/intact-ols/pom.xml
+++ b/repo/bridges/trunk/legacy/intact-ols/pom.xml
@@ -76,6 +76,13 @@
             <version>1.13</version>
         </dependency>
 
+        <!-- Caching techology-->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>1.2.4RC</version>
+        </dependency>        
+
     </dependencies>
 
     <repositories>
