--- a/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
             <artifactId>intact-uniprot-export</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
