--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>editor-app</artifactId>
     <packaging>war</packaging>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.9.0</version>
 
     <name>IntAct Services :: Editor :: Editor Webapp</name>
 
@@ -24,7 +24,7 @@
         <maven.test.skip>true</maven.test.skip>
         <db.connectionProviderClass>uk.ac.ebi.intact.application.editor.hibernate.EditorConnectionProvider
         </db.connectionProviderClass>
-        <core.version>1.9.2-SNAPSHOT</core.version>
+        <core.version>1.9.2</core.version>
         <bridges.version>2.0.5</bridges.version>
     </properties>
 
