--- a/repo/plugins-miscel/trunk/psimitab-indexer-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/psimitab-indexer-maven-plugin/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
