--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -2,9 +2,9 @@ log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact=INFO
 
-log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
+log4j.category.uk.ac.ebi.intact.application.editor=INFO
 log4j.category.uk.ac.ebi.intact.application.editor.hibernate=INFO
-log4j.category.uk.ac.ebi.intact.application.editor.hibernate.ConnectionManager=DEBUG
+log4j.category.uk.ac.ebi.intact.application.editor.hibernate.ConnectionManager=INFO
 log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
 log4j.category.uk.ac.ebi.intact.application.editor.struts.framework.util.EditorMenuFactory=INFO
 
@@ -14,7 +14,7 @@ log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=INFO
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
-log4j.category.uk.ac.ebi.intact.webapp=DEBUG
+log4j.category.uk.ac.ebi.intact.webapp=INFO
 
 # other
 
