--- a/repo/sanity/trunk/intact-sanity-rules/pom.xml
+++ b/repo/sanity/trunk/intact-sanity-rules/pom.xml
@@ -18,6 +18,7 @@
             <plugin>
                 <groupId>org.apache.myfaces.tobago</groupId>
                 <artifactId>maven-apt-plugin</artifactId>
+				<version>1.0.11</version>
                 <configuration>
                     <target>1.5</target>
                 </configuration>
