--- a/repo/maven/trunk/master-pom/pom.xml
+++ b/repo/maven/trunk/master-pom/pom.xml
@@ -6,16 +6,16 @@
     <artifactId>intact-master</artifactId>
     <packaging>pom</packaging>
     <name>Master POMs :: Master POM</name>
-    <version>15-SNAPSHOT</version>
+    <version>15</version>
     
     <description>This is a master POM that is meant to be used by the various Intact modules. It contains information
         that is common to all projects.
     </description>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/trunk/master-pom</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/trunk/master-pom</developerConnection>
-        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/maven/trunk/master-pom</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/tags/maven-poms-1.1/master-pom</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/maven/tags/maven-poms-1.1/master-pom</developerConnection>
+        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/maven/tags/maven-poms-1.1master-pom</url>
     </scm>
 
     <properties>
