--- a/repo/bridges/trunk/coredep/pom.xml
+++ b/repo/bridges/trunk/coredep/pom.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
        <groupId>uk.ac.ebi.intact.bridges</groupId>
        <artifactId>bridges-master</artifactId>
-       <version>2.0.6-SNAPSHOT</version>
+       <version>2.0.6</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
     <artifactId>coredep</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.6-SNAPSHOT</version>
+    <version>2.0.6</version>
 
     <name>IntAct Bridges :: Core Dependent</name>
 
