--- a/repo/bridges/trunk/coredep/intact-cdb/pom.xml
+++ b/repo/bridges/trunk/coredep/intact-cdb/pom.xml
@@ -3,14 +3,14 @@
     <parent>
        <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
        <artifactId>coredep</artifactId>
-       <version>2.0.6</version>
+       <version>2.0.7-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intact-cdb</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.6</version>
+    <version>2.0.7-SNAPSHOT</version>
 
     <name>IntAct Bridges :: Core Dependent :: CDB</name>
     <description>IntAct access to the CDB web service</description>
