--- a/repo/bridges/trunk/coredep/pom.xml
+++ b/repo/bridges/trunk/coredep/pom.xml
@@ -3,7 +3,7 @@
     <parent>
        <groupId>uk.ac.ebi.intact.bridges</groupId>
        <artifactId>bridges-master</artifactId>
-       <version>2.0.6</version>
+       <version>2.0.7-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
     <artifactId>coredep</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.6</version>
+    <version>2.0.7-SNAPSHOT</version>
 
     <name>IntAct Bridges :: Core Dependent</name>
 
