--- a/repo/bridges/trunk/pom.xml
+++ b/repo/bridges/trunk/pom.xml
@@ -11,7 +11,7 @@
     <groupId>uk.ac.ebi.intact.bridges</groupId>
     <artifactId>bridges-master</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.6</version>
+    <version>2.0.7-SNAPSHOT</version>
 
     <name>IntAct Bridges</name>
     <description>Bridges Master POM</description>
@@ -22,9 +22,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/tags/bridges-master-2.0.6</connection>
-        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/tags/bridges-master-2.0.6</developerConnection>
-        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/bridges/tags/bridges-master-2.0.6</url>
+        <connection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/trunk</connection>
+        <developerConnection>scm:svn:https://intact.svn.sourceforge.net/svnroot/intact/repo/bridges/trunk</developerConnection>
+        <url>http://intact.svn.sourceforge.net/viewcvs.cgi/intact/repo/bridges/trunk</url>
     </scm>
 
     <modules>
