--- a/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
@@ -24,23 +24,25 @@
     </scm>
 
     <dependencies>
-
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
             <artifactId>intact-uniprot-export</artifactId>
             <version>2.0.2-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-exchange</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2</version>
+        </dependency>
+                <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
