--- a/repo/bridges/trunk/intact-ontologies/pom.xml
+++ b/repo/bridges/trunk/intact-ontologies/pom.xml
@@ -27,6 +27,37 @@
             <artifactId>lucene-core</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>0.5</version>
+        </dependency>
     </dependencies>
+
+    <!-- EBI repositories -->
+    <repositories>
+        <repository>
+            <id>ebi-repo</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ebi-repo-snapshots</id>
+            <name>The EBI internal repository</name>
+            <url>http://www.ebi.ac.uk/~maven/m2repo_snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
