--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
@@ -29,7 +29,12 @@
             <groupId>uk.ac.ebi.intact.util</groupId>
             <artifactId>intact-ols</artifactId>
             <version>2.0-beta-10-SNAPSHOT</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.bridges</groupId>
+            <artifactId>intact-ontologies</artifactId>
+            <version>2.0.6-SNAPSHOT</version>
+        </dependency>
 
         <!-- Third party -->
         <dependency>
