--- a/repo/plugins-miscel/trunk/psimitab-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/psimitab-maven-plugin/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>intact-psimitab</artifactId>
             <version>2.0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab-converters</artifactId>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
 
         <!-- Maven deps -->
         <dependency>
