--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -26,7 +26,7 @@
         <user>${env.USERNAME}</user>
         <appRoot>/intact</appRoot>
 
-        <core.version>1.9.0</core.version>
+        <core.version>1.9.4</core.version>
     </properties>
 
     <modules>
@@ -176,6 +176,9 @@
                      <plugin>
                          <groupId>uk.ac.ebi.intact.plugins</groupId>
                          <artifactId>hibernateconfig-maven-plugin</artifactId>
+                         <configuration>
+                         <formatSql>false</formatSql>
+                         </configuration>
                      </plugin>
                  </plugins>
              </build>
