--- a/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
+++ b/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/pom.xml
@@ -23,6 +23,20 @@
         <url>http://svn.sourceforge.net/viewcvs.cgi/intact/repo/plugins-miscel/trunk/uniprotexport-maven-plugin/</url>
     </scm>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <!-- need more memory than the default for our unit tests -->
+                    <argLine>-Xmx256m</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.uniprotexport</groupId>
